# ai-health-assistant-bot

./: .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile-migrations  Makefile  README.md  backend.py  docker-compose.yaml  pyproject.toml  remove_comments.py
bot/: .env local  bot.py  settings.py
bot/adapters/: exceptions.py
bot/adapters/ai_health/: adapter.py  schemas.py
bot/common/: bot_commands.py  messages.py
bot/common/keyboards/: keys.py  samples.py
bot/common/keyboards/default/: consts.py
bot/common/keyboards/inline/: callbacks.py  consts.py
bot/common/keyboards/keyboard_utils/: schema_generator.py
bot/dependencies/: di_container.py
bot/exceptions/: __init__.py  base.py  keyboard_utils.py
bot/fsm/: states.py
bot/fsm/managers/: main_menu.py
bot/handlers/: __init__.py
bot/handlers/start/: start.py
bot/infrastructure/http_client/: base.py  enums.py  exceptions.py  factory.py  models.py
bot/infrastructure/http_client/ai_health/: client.py  schemas.py
bot/persistent/: __init__.py
bot/utils/: __init__.py  extractor.py  logging.py  plan_helper.py  smart_session.py
bot/views/service/: add_chat.py  add_plan_disease.py  add_plan_exercise.py  add_plan_factor.py  add_plan_goal.py  add_plan_place.py  delete_chat.py  generate_plan.py  get_chats.py  get_exercises.py  get_places.py  get_plan_info.py  get_risk_factors.py  get_user_goals.py  send_message.py  set_plan_exercise_type.py  update_plan.py
migrations/: changelog.xml
migrations/sql/: 20241008_0001_init_693678.sql
