[tool.poetry]
name = "bot"
version = "0.1.0"
authors = ["leopold"]
description = "AI Health assistant bot"

[tool.poetry.dependencies]
python = "^3.10"

#Lint
mypy = "^1.9.0"
isort = "^5.13.2"
black = "^24.3.0"

#Main
aiogram = "^3.19.0"
httpx = "^0.28.1"
loguru = "^0.7.3"
orjson = "^3.10.16"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
pytz = "^2025.2"
redis = "^5.2.1"
uvicorn = "^0.34.0"
cachetools = "^5.5.2"
sqlalchemy = "^2.0.40"
asyncio = "^3.4.3"
asyncpg = "^0.30.0"
dependency-injector = "^4.46.0"
structlog = "^25.2.0"
aioredis = "^2.0.1"
aiohttp = "^3.11.16"

[dependency-groups]
dev = [
    "jurigged>=0.6.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
^/(
  (
     \.git
    | \.pytest_cache
    | \.run
    | logs
    | docs
    | tests/integration
  )/
)
'''

[tool.isort]
line_length = 120
force_grid_wrap = 0
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
known_first_party = "svc"
default_section = "THIRDPARTY"
lines_after_imports = -1

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
